--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "fbjs": "^3.0.5",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
