--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.9",
     "fbjs": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-collapsible": "^1.6.2",
