--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.9",
     "fbjs": "^3.0.5",
@@ -33,7 +34,9 @@
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.1",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
